[gd_scene load_steps=4 format=3 uid="uid://c6ue1qnj30p5b"]

[ext_resource type="Script" uid="uid://k24ttw8i8ox4" path="res://Scripts/SCENES/game_over.gd" id="1_k82a4"]
[ext_resource type="FontFile" uid="uid://cy0lbkvt1xb4p" path="res://Fonts/Cute Dino.otf" id="2_5sm0u"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fv041"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k82a4")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.13319641, 0.13319641, 0.13319638, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -639.5
offset_right = 639.5
offset_bottom = 84.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.6901961, 0.23921569, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_5sm0u")
theme_override_font_sizes/font_size = 64
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_trim_flags = 0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -82.0
offset_top = -66.0
offset_right = 82.0
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="Restart" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6901961, 0.23921569, 0, 1)
theme_override_colors/font_focus_color = Color(0.95, 0.95, 0.95, 1)
theme_override_colors/font_pressed_color = Color(0.94824654, 0.34109905, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_5sm0u")
theme_override_font_sizes/font_size = 56
theme_override_styles/focus = SubResource("StyleBoxEmpty_fv041")
text = "RESTART"
flat = true

[node name="Menu" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../Quit")
theme_override_colors/font_color = Color(0.6901961, 0.23921569, 0, 1)
theme_override_colors/font_focus_color = Color(0.95, 0.95, 0.95, 1)
theme_override_colors/font_pressed_color = Color(0.94824654, 0.34109905, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_5sm0u")
theme_override_font_sizes/font_size = 56
theme_override_styles/focus = SubResource("StyleBoxEmpty_fv041")
text = "MENU"
flat = true

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../Quit")
theme_override_colors/font_color = Color(0.6901961, 0.23921569, 0, 1)
theme_override_colors/font_focus_color = Color(0.95, 0.95, 0.95, 1)
theme_override_colors/font_pressed_color = Color(0.94824654, 0.34109905, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_5sm0u")
theme_override_font_sizes/font_size = 56
theme_override_styles/focus = SubResource("StyleBoxEmpty_fv041")
text = "QUIT"
flat = true

[connection signal="pressed" from="VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="VBoxContainer/Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
